# github-trend

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: weekly-trending.yml
docs/superpowers/plans/: 2026-05-11-github-trending-mvp-a-implementation-plan.md
docs/superpowers/specs/: 2026-05-11-github-trending-design.md
scripts/: create_issue.py  fetch_trending.py  render_markdown.py
tests/: test_fetch_trending.py  test_render_markdown.py
tests/fixtures/: trending_expected.json  trending_sample.html
