[project]
name = "github-trend"
version = "0.1.0"
description = "Automate weekly GitHub Trending reports and publish deduplicated GitHub issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
