[project]
name = "github-trend"
version = "0.1.0"
description = "Automate weekly GitHub Trending reports and publish deduplicated GitHub issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
